# MedVision

./: .gitignore  main.py  pyproject.toml
backend/: app.py  gradcam.py  predictor.py  schemas.py  utils.py
configs/: config.py
evaluation/: confusion_matrix.py  evaluate.py  metrics.py
frontend/: api.py  app.py
models/: model_factory.py
notebooks/: 01_dataset_exploration.ipynb  02_data_pipeline.ipynb
scripts/: test_gradcam.py
training/: evaluate.py  evaluate_resnet.py  inspect_dataset.py  train.py  train_resnet.py  trainer.py  visualize_dataset.py
utils/: class_weights.py  dataloaders.py  transforms.py
